fix navbar alignment for chrome and safari.

--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -19,6 +19,7 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 40px;
+  vertical-align: top;
 }
 
 .spinner {
